changed link on music page

--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a> -->
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -358,66 +358,66 @@
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Proxima II
+                                <a href="https://soundcloud.com/tytytyty_bass/proxima-ii">Proxima II</a>
                             </h4>
-                            <p>
-                               <a href="https://soundcloud.com/tytytyty_bass/proxima-ii">Click here for Soundcloud link!</a>
-                            </p>
+                            <!-- <p>
+                               Click here for Soundcloud link!</a>
+                            </p> -->
                         </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Altered
+                                <a href="https://soundcloud.com/tytytyty_bass/altered_synthwave">Altered</a>
                             </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/altered_synthwave">Click here for Soundcloud link!</a>
-                            </p>
+                            <!-- <p>
+                                Click here for Soundcloud link!</a>
+                            </p> -->
                         </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Aetherius
+                                <a href="https://soundcloud.com/tytytyty_bass/aetherius">Aetherius</a>
                             </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/aetherius">Click here for Soundcloud link!</a>
-                            </p>
+                            <!-- <p>
+                                Click here for Soundcloud link!
+                            </p> -->
                         </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Silicone Sunset
+                                <a href="https://soundcloud.com/tytytyty_bass/silicone-sunset-synthwave">Silicone Sunset</a>
                             </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/silicone-sunset-synthwave">Click here for Soundcloud link!</a>
-                            </p>
+                            <!-- <p>
+                                Click here for Soundcloud link!</a>
+                            </p> -->
                         </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Sacred Circles
+                                <a href="https://soundcloud.com/tytytyty_bass/sacred-circles">Sacred Circles</a>
                             </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/sacred-circles">Click here for Soundcloud link!</a>
-                            </p>
+                            <!-- <p>
+                                Click here for Soundcloud link!</a>
+                            </p> -->
                         </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
-                                Losing Us
+                                <a href="https://soundcloud.com/tytytyty_bass/losing-us">Losing Us</a>
                             </h4>
-                            <p>
-                                <a href="https://soundcloud.com/tytytyty_bass/losing-us">Click here for Soundcloud link!</a>
-                            </p>
+                            <!-- <p>
+                                Click here for Soundcloud link!</a>
+                            </p> -->
                         </div>
                     </div>
                 </div>
