updated avatar and added project to project page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero_portrait.jpg" alt="">
+                    <img src="img/avatar-astronaut.png" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -271,20 +271,20 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/phone3.jpg" alt="">
+                        <img src="img/subatomic-project.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>More Coming Soon!</h3>
+                        <h3>Particle Sim</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/tflannagan/ParticleSim" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a> -->
-                            <a href="#" class="icon">
+                            <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
