refactored info page, took out music page

--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
                             <p class="small-text">Years of <br />Tech Experience</p>
                         </div>
                     </div>
-                    <div class="about-item">
+                    <!-- <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">3+</p>
                             <p class="small-text">Years of <br />Management Experience</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">15+</p>
                             <p class="small-text">Years of <br />Work Experience</p>
                         </div>
                     </div>
-                    <div class="about-item">
+                    <!-- <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Years of <br />Sound Design</p>
+                            <p class="large-text">20+</p>
+                            <p class="small-text">Years of <br />Computer Experience</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="about-stats">
@@ -113,7 +113,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">JavaScript</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -122,7 +122,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">TypeScript</p>
                         <div class="progress-con">
-                            <p class="prog-text">60%</p>
+                            <p class="prog-text">75%</p>
                             <div class="progress">
                                 <span class="typescript"></span>
                             </div>
@@ -348,7 +348,7 @@
                
             </div>
         </section>
-        <section class="container" id="blogs">
+        <!-- <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
                     <h2>My <span>Music</span><span class="bg-text">My Music</span></h2>
@@ -363,7 +363,7 @@
                             <!-- <p>
                                Click here for Soundcloud link!</a>
                             </p> -->
-                        </div>
+                        <!-- </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
@@ -374,55 +374,55 @@
                             <!-- <p>
                                 Click here for Soundcloud link!</a>
                             </p> -->
-                        </div>
+                        <!-- </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 <a href="https://soundcloud.com/tytytyty_bass/aetherius">Aetherius</a>
-                            </h4>
+                            </h4> -->
                             <!-- <p>
                                 Click here for Soundcloud link!
                             </p> -->
-                        </div>
+                        <!-- </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 <a href="https://soundcloud.com/tytytyty_bass/silicone-sunset-synthwave">Silicone Sunset</a>
-                            </h4>
+                            </h4> -->
                             <!-- <p>
                                 Click here for Soundcloud link!</a>
                             </p> -->
-                        </div>
+                        <!-- </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 <a href="https://soundcloud.com/tytytyty_bass/sacred-circles">Sacred Circles</a>
-                            </h4>
+                            </h4> -->
                             <!-- <p>
                                 Click here for Soundcloud link!</a>
                             </p> -->
-                        </div>
+                        <!-- </div>
                     </div>
                     <div class="blog">
                         <img src="img/synth_thumb2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 <a href="https://soundcloud.com/tytytyty_bass/losing-us">Losing Us</a>
-                            </h4>
+                            </h4> -->
                             <!-- <p>
                                 Click here for Soundcloud link!</a>
                             </p> -->
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> --> 
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
@@ -498,7 +498,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="right-contact">
+                    <!-- <div class="right-contact">
                         <form id="fcf-form-id" class="input" method="post" action="contact-form.php">
                             <label for="Name" class="fcf-label"></label>
                             <div class="input-control">
@@ -519,7 +519,7 @@
                             <button type="submit" id="fcf-button" class="submit-btn">Send</button>
                         </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -534,9 +534,9 @@
       <div class="control control-3 " data-id="portfolio">
         <i class="fa-solid fa-book-open"></i>
       </div>
-      <div class="control control-4 " data-id="blogs">
+      <!-- <div class="control control-4 " data-id="blogs">
         <i class="fa-solid fa-music"></i>
-      </div>
+      </div> -->
       <div class="control control-5 " data-id="contact">
         <i class="fa-solid fa-mobile"></i>
       </div>
