updated work pages

--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/project_mL_thumb.png" alt="">
+                       <img src="img/ai-art-coverart.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Machine Learning Car</h3>
+                        <a href="https://tflannagan.github.io/AI-Art-Gallery/">  <h3>AI Art Gallery</h3></a>
                         <div class="icons">
-                            <a href="https://github.com/tflannagan/MachineLearningGame" class="icon">
+                            <a href="https://github.com/tflannagan/AI-Art-Gallery" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <!-- <a href="#" class="icon">
@@ -293,20 +293,20 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/phone4.jpg" alt="">
+                        <img src="img/project_mL_thumb.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>More Coming Soon!</h3>
+                        <h3>Machine Learning Car</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/tflannagan/MachineLearningGame" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a> -->
-                            <a href="#" class="icon">
+                            <!-- <a href="" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
