updated sim link

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <img src="img/subatomic-project.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Particle Sim</h3>
+                       <a href="https://tflannagan.github.io/ParticleSim/"><h3>Particle Sim</h3></a>
                         <div class="icons">
                             <a href="https://github.com/tflannagan/ParticleSim" class="icon">
                                 <i class="fab fa-github"></i>
