fixed dark/light theme

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ty Flannagan's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -548,9 +549,9 @@
         <i class="fa-solid fa-mobile"></i>
       </div>
     </div>
-    <!-- <div class="theme-btn">
+    <div class="theme-btn">
         <i class="fas fa-adjust"></i>
-    </div> -->
+    </div>
     
 
    
