--- a/index.html
+++ b/index.html
@@ -296,24 +296,24 @@
                         <p class="desc-text">JavaScript // HTML5 // CSS3</p>
                     </div>
                 </div>
-                <!-- <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
                         <img src="img/project_mL_thumb.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Machine Learning Car</h3>
-                        <div class="icons">
+                        <div class="icons"> 
                             <a href="https://github.com/tflannagan/MachineLearningGame" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a> -->
+                            </a> 
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a> -->
-                            <!-- <a href="" class="icon">
+                            </a> 
+                           <a href="" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
-                        <!-- </div>
-                    </div>
+                         </div>
+                    </div> 
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
@@ -324,13 +324,13 @@
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a> -->
-                            <!-- <a href="#" class="icon">
+                            </a> 
+                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a> -->
-                            <!-- <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
+                             <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -343,16 +343,16 @@
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a> -->
+                            </a> 
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
-                            </a> -->
-                            <!-- <a href="#" class="icon">
+                            </a> 
+                            <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
-                </div> -->
+                </div> 
                
             </div>
         </section>
@@ -461,7 +461,7 @@
                                     <span>flannagantyler@gmail.com</span>
                                 </p>
                             </div>
-                            <div class="contact-item">
+                            <!-- <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
                                     <span>Education:</span>
@@ -469,7 +469,7 @@
                                 <p>
                                     <span>Self Taught</span>
                                 </p>
-                            </div>
+                            </div> -->
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-phone"></i>
