ui fixes and updates

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                        <img src="img/ai-art-coverart.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <a href="https://tflannagan.github.io/AI-Art-Gallery/">  <h3>AI Art Gallery</h3></a>
+                        <h3>AI Art Gallery</h3>
                         <div class="icons">
                             <a href="https://github.com/tflannagan/AI-Art-Gallery" class="icon">
                                 <i class="fab fa-github"></i>
@@ -252,7 +252,9 @@
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
-                        <p class="desc-text">React // HTML5 // CSS3 // JavaScript </p>
+                        <a class="demo-link" href="https://tflannagan.github.io/AI-Art-Gallery/">
+                        <p class="desc-text">Live Demo</p>
+                        </a>
                     </div>
                 </div>
                 <div class="portfolio-item">
@@ -273,7 +275,7 @@
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div>
-                        <p class="desc-text">React // HTML5 // CSS3</p>
+                        <!-- <p class="desc-text">React // HTML5 // CSS3</p> -->
                     </div>
                 </div>
                 <div class="portfolio-item">
@@ -281,7 +283,7 @@
                         <img src="img/subatomic-project.png" alt="">
                     </div>
                     <div class="hover-items">
-                       <a href="https://tflannagan.github.io/ParticleSim/"><h3>Particle Sim</h3></a>
+                       <h3>Particle Sim</h3></a>
                         <div class="icons">
                             <a href="https://github.com/tflannagan/ParticleSim" class="icon">
                                 <i class="fab fa-github"></i>
@@ -292,8 +294,8 @@
                             <!-- <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
-                        </div>
-                        <p class="desc-text">JavaScript // HTML5 // CSS3</p>
+                        </div><a class="demo-link" href="https://tflannagan.github.io/ParticleSim/">
+                        <p class="desc-text">Live Demo</p></a>
                     </div>
                 </div>
                 <div class="portfolio-item">
