changed text on work items

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             </a> -->
                         </div>
                         <a class="demo-link" href="https://tflannagan.github.io/AI-Art-Gallery/">
-                        <p class="desc-text">Live Demo</p>
+                        <p class="desc-text">Live Site</p>
                         </a>
                     </div>
                 </div>
@@ -295,7 +295,7 @@
                                 <i class="fab fa-youtube"></i>
                             </a> -->
                         </div><a class="demo-link" href="https://tflannagan.github.io/ParticleSim/">
-                        <p class="desc-text">Live Demo</p></a>
+                        <p class="desc-text">Live Site</p></a>
                     </div>
                 </div>
                 <div class="portfolio-item">
