contact page updates

--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
                                 <a href="https://github.com/tflannagan" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://www.youtube.com/channel/UCQqAu3rAruUhjyrePq5P6eg" target="_blank">
-                                    <i class="fab fa-youtube"></i>
+                                <a href="https://www.linkedin.com/in/ty-flannagan-774622251/" target="_blank">
+                                    <i class="fa-solid fa-users"></i>
                                 </a>
                             </div>
                         </div>
