moving around profile picture on main page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="header-content">
             <div class="left-header">
                 
-                <div class="h-shape"></div>
-                <div  class="image">
-                    <img  src="img/avatar-astronaut.png" alt="">
+                <!-- <div class="h-shape"></div> -->
+                <div  class="image"> 
+                   <img  src="img/avatar-astronaut.png" alt="img">
                     <!-- <div id="target" class="cursor"></div> -->
                 </div>
             </div>
