fixed contact number

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                     <span>Mobile Number:</span>
                                 </div>
                                 <p>
-                                    <span>17752769974</span>
+                                    <span>775.276.9974</span>
                                 </p>
                             </div>
                             <!-- <div class="contact-item">
