more ui updates

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
     </header>
     <main>
-        <section class="container about" id="about">
+        <section class="container" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">About me</span></h2>
+                <h2>About <span>Me</span><span class="bg-text">About Me</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
@@ -442,7 +442,7 @@
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Contact me here</h4>
+                        <!-- <h4>Contact me here</h4> -->
                         <p>
                             Please feel free to contact me regarding any emplyoment or contract work.
                         </p>
