--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                       <img src="img/ai-art-coverart.png" alt="">
+                       <img src="img/aiartcover.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>AI Art Gallery</h3>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/imageMealPickerHero.png" alt="">
+                        <img src="img/meal-picker.png" alt="img">
                     </div>
                     <div class="hover-items">
                         <h3>Meal Picker</h3>
