--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
                         <img src="img/projectart6.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Machine Learning Car</h3>
+                        <a class="demo-link" href="https://www.youtube.com/watch?v=chjd8xspRhE">
+                        <h3>Machine Learning Car</h3></a>
                         <div class="icons"> 
                             <a href="https://github.com/tflannagan/MachineLearningGame" class="icon">
                                 <i class="fab fa-github"></i>
