--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Developer driven by hardwork and passion, feuled by data and information, intending to make a substantial impact on the always changing and evolving world.
                 </p>
                 <div class="btn-con">
-                    <a href="./assets/2023CV.pdf" class="main-btn">
+                    <a href="./assets/ResumeCV23.pdf" class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -52,7 +52,7 @@
                        <br>
                     </p>
                     <div class="btn-con">
-                        <a href="./assets/2023CV.pdf" class="main-btn">
+                        <a href="./assets/ResumeCV23.pdf" class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
