--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     <div class="left-contact">
                         <!-- <h4>Contact me here</h4> -->
                         <p>
-                            Please feel free to contact me regarding any emplyoment or contract work.
+                            Please feel free to contact me regarding any employment or contract work.
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
