--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 Developer driven by hardwork and passion, feuled by data and information, intending to make a substantial impact on the always changing and evolving world.
                             </p>
                             <div class="btn-con">
-                                <a href="./assets/ResumeCV23.pdf" class="main-btn">
+                                <a href="./assets/Resume2023-TyFlannagan.pdf" class="main-btn">
                                     <span class="btn-text">Download Resume</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
@@ -59,7 +59,7 @@
                             <br>
                             </p>
                             <div class="btn-con">
-                                <a href="./assets/ResumeCV23.pdf" class="main-btn">
+                                <a href="./assets/Resume2023-TyFlannagan.pdf" class="main-btn">
                                     <span class="btn-text">Download Resume</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
