updated work on portfolio page

--- a/index.html
+++ b/index.html
@@ -182,19 +182,20 @@
                             <img src="img/projectart2.png" alt="">
                             </div>
                             <div class="hover-items">
-                                <a class="demo-link" href="https://github.com/tflannagan/Python-Projects">
-                                <h3>Mini 🐍</h3>
+                                <a class="demo-link" href="https://tflannagan.github.io/MusicPortfolio/">
+                                <h3>Artist Portfolio</h3>
                             </a>
                             </a>
                                 <div class="icons">
-                                    <a href="https://github.com/tflannagan/Python-Projects" class="icon">
+                                    <a href="https://github.com/tflannagan/MusicPortfolio" class="icon">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
                                 <div class="fa-container">
                             
-                                    <i class="fa-brands fa-python"></i>
-                                
+                                    <i class="fa-brands fa-html5"></i>
+                                    <i class="fa-brands fa-react"></i>
+                                    <i class="fa-brands fa-css3-alt"></i>
                                 </div>
                             </div>
                         </div>
