--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
                                 <img src="img/projectart4.png" alt="">
                             </div>
                             <div class="hover-items">
-                                <a class="demo-link" href="https://tflannagan.github.io/ParticleSim/">
-                            <h3>Particle Sim</h3></a>
+                                <a class="demo-link" href="https://tflannagan.github.io/DataEmporium/">
+                            <h3>Data Emporium</h3></a>
                                 <div class="icons">
-                                    <a href="https://github.com/tflannagan/ParticleSim" class="icon">
+                                    <a href="https://github.com/tflannagan/DataEmporium" class="icon">
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <!-- <a href="#" class="icon">
