fixed link on portfolio item

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 <a class="demo-link" href="https://tflannagan.github.io/ExcelGuide/">
                                 <h3>Excel Guide</h3></a>
                                 <div class="icons">
-                                    <a href="https://tflannagan.github.io/ExcelGuide/" class="icon">
+                                    <a href="https://github.com/tflannagan/ExcelGuide" class="icon">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 
